# engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: default.frag  default.vert
src/: CMakeLists.txt  main.cpp
src/asset/: asset.h  assetmanager.cpp  assetmanager.h  model.h  texture.h
src/component/: camera.cpp  camera.h  component.h  controller.h  flycontroller.cpp  flycontroller.h  model.cpp  model.h  rigidbody.cpp  rigidbody.h  rigidbodycontroller.cpp  rigidbodycontroller.h  transform.cpp  transform.h
src/components/: camera.cpp  camera.h  component.h  controller.h  flycontroller.cpp  flycontroller.h  mesh.h  model.cpp  model.h  transform.cpp  transform.h
src/core/: deltatime.cpp  deltatime.h  engine.cpp  engine.h  mesh.h  texture.h  vertex.h  window.cpp  window.h
src/entities/: entity.cpp  entity.h  entitymanager.cpp  entitymanager.h
src/entity/: entity.cpp  entity.h  entitymanager.cpp  entitymanager.h
src/physics/: internal.h  layers.h  physicsmanager.cpp  physicsmanager.h
src/physics/collider/: box.cpp  box.h  capsule.cpp  capsule.h  collider.h  convexhull.cpp  convexhull.h  mesh.cpp  mesh.h
src/player/: playermanager.cpp  playermanager.h
src/render/: framebuffer.h  gl.cpp  gl.h  renderer.h
src/render/gl/: apiobjects.h  framebuffer.cpp  framebuffer.h  renderer.cpp  renderer.h
src/tools/: modelimport.cpp  modelimport.h  scrollingbuffer.h
src/ui/: editor.cpp  editor.h  imgui.cpp  imgui.h
